--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <br><br>
 <center>
-<img src="C:\Users\Lenovo\Pictures\wallpapers\153-1531529_training-jordan-nike-wallpaper-hd-2016-in-fitness.png" align="center" height="300" weidth="300" border="3"></center>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" align="center" height="300" weidth="300" border="3"></center>
 <p><b><h1><font color="navy">About this image:</b></h1></font>
 <p>
 <font color="olive" size="+2" >The results of racing events are decided by finishing position (or time, where measured), while the jumps and throws are won by the athlete that achieves the highest or furthest measurement from a series of attempts. The simplicity of the competitions, and the lack of a need for expensive equipment, makes athletics one of the most common types of sports in the world. Athletics is mostly an individual sport, with the exception of relay races and competitions which combine athletes' performances for a team score, such as cross country.</font>
